# GRiPALMath

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: codeql.yml
example/: CMakeLists.txt  main.cpp
include/: advanced_math.h  math_operations.h  statistics.h
src/: advanced_math.cpp  math_operations.cpp  statistics.cpp
